--- a/index.html
+++ b/index.html
@@ -189,5 +189,15 @@
     requestAnimationFrame(centerBox);
   });
 </script>
+  
+<!-- Link to the modular Room Painter -->
+<div style="position:fixed; bottom:10px; right:10px; z-index:1000;">
+  <a href="room-painter.html">
+    <button style="padding:10px 16px; font-size:16px; border-radius:8px;">
+      🎨 Open Room Painter
+    </button>
+  </a>
+</div>
+
 </body>
 </html>
