--- a/index.html
+++ b/index.html
@@ -192,8 +192,9 @@
   
 <!-- Link to the modular Room Painter -->
 <div style="position:fixed; bottom:10px; right:10px; z-index:10000;">
-  <button onclick="window.location.href='room-painter.html';"
-          style="padding:10px 16px; font-size:16px; border-radius:8px;">
+  <button
+    onclick="window.location.href='/aigeniusplus-room-proto-/room-painter-2d.html';"
+    style="padding:10px 16px; font-size:16px; border-radius:8px;">
     🎨 Open Room Painter
   </button>
 </div>
