--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Practice Room – Box in a Box (Enhanced)</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="icon-180.png">
 <style>
   :root { --bg:#111; --room:#f2f2f2; --box:#caa84f; --border:#000; }
   * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
